Fix result box overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -77,6 +77,7 @@ nav > * {
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-end;
+  overflow: hidden;
 }
 
 .gray-box p {
@@ -112,11 +113,13 @@ nav > * {
   border: 1px solid var(--reactBlue);
 }
 
-.orange-button:hover {
+.orange-button:hover,
+.orange-button:active {
   background-color: var(--orangeButton);
 }
 
-.gray-button:hover {
+.gray-button:hover,
+.gray-button:active {
   background-color: var(--reactBlue);
 }
 
@@ -128,6 +131,15 @@ nav > * {
   .gray-box p,
   .operation-grid > * {
     font-size: 25px;
+  }
+
+  header {
+    font-size: 60%;
+  }
+
+  .link {
+    font-size: 13px;
+    margin-right: 10px;
   }
 
   .gray-box {
